--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,7 @@ body {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    margin-top: 20px;
   }
   
   .tarjeta {
@@ -128,4 +129,3 @@ body {
     width: 32px;
     height: 32px;
   }
-  
