Añadido login y registro
- Añadidos login y registro.
- Cambiado botón de filtrado por checkbox.
- Cambiado header para incluir login y registro

--- a/css/galeria.css
+++ b/css/galeria.css
@@ -31,6 +31,10 @@ body {
     color: #333;
     text-decoration: none;
   }
+
+  .home-link:hover {
+    color: inherit;
+  }
   
   .buscador {
     display: flex;
@@ -129,3 +133,7 @@ body {
     width: 32px;
     height: 32px;
   }
+
+.checkFiltrar:hover{
+  cursor: 
+}
