--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,41 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
 body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #1b1b32;
-    color: #f5f6f7;
+    background-color: #c5c5c5;
+    color: black;
     font-family: Tahoma;
     font-size: 16px;
+    margin-bottom: 15%;
   }
+  header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background: #f4f4f4;
+    border-bottom: 1px solid #ddd;
+  }
+  header img {
+    max-height: 50px;
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  .home-link {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+  }
+
   
   h1{
     margin: 1em auto;
@@ -41,9 +70,9 @@ body {
     width: 100%;
     min-height: 2em;
 
-    background-color: #0a0a23;
-    border: 1px solid #0a0a23;
-    color: #ffffff;
+    background-color: #f4f4f4;
+    border: 1px solid black;
+    color: black;
   }
   
   .inline {
@@ -59,8 +88,8 @@ body {
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    background-color: #3b3b4f;
-    border-color: white;
+    background-color: #f4f4f4;
+    border-color: black;
     min-width: 300px;
   }
   
@@ -81,4 +110,31 @@ body {
     color: red;
   }
   
+  .btn:hover{
+    background-color: black;
+    color: white
+  }
+
+  footer {
+    grid-area: footer;
+    padding: 1rem;
+    text-align: center;
+    background: #333;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  footer div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  footer .logo {
+    width: 32px;
+    height: 32px;
+  }
   
