--- a/css/login.css
+++ b/css/login.css
@@ -6,6 +6,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
+    padding: 0;
     background-color: #c5c5c5;
     color: black;
     font-family: Tahoma;
@@ -13,7 +14,6 @@ body {
     margin-bottom: 15%;
   }
   header {
-    grid-area: header;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,11 +43,11 @@ body {
   }
   
   form {
-    width: 60vw;
+    max-width: 500px;
     max-width: 500px;
     min-width: 300px;
     margin: 0 auto;
-    padding-bottom: 2em;
+   padding-bottom: 2em
   }
   
   fieldset {
@@ -116,7 +116,6 @@ body {
   }
 
   footer {
-    grid-area: footer;
     padding: 1rem;
     text-align: center;
     background: #333;
