--- a/css/login.css
+++ b/css/login.css
@@ -1,17 +1,16 @@
-html {
-  min-height: 100%;
-  position: relative;
-}
+
+  
+
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: #c5c5c5;
     color: black;
     font-family: Tahoma;
     font-size: 16px;
-    margin-bottom: 15%;
+    margin-bottom: 32%;
   }
   header {
     display: flex;
@@ -47,7 +46,7 @@ body {
     max-width: 500px;
     min-width: 300px;
     margin: 0 auto;
-   padding-bottom: 2em
+   padding-bottom: 2em;
   }
   
   fieldset {
@@ -122,7 +121,8 @@ body {
     color: #fff;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    position: fixed;
+    width:100%;
   }
   
   footer div {
@@ -136,4 +136,7 @@ body {
     width: 32px;
     height: 32px;
   }
+
+  
+  
   
